# glassbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  glassbox_openai_proxy.py  glassbox_proxy.py  pyproject.toml
.github/workflows/: test.yml
examples/: demo_langgraph.py  demo_openai.py
spec/: CONTEXTPACK_SPEC.md  context-pack.schema.json  run-metadata.schema.json
spec/fixtures/: invalid_bad_rejection_reason.json  invalid_bad_section_type.json  invalid_missing_required.json  invalid_negative_tokens.json  valid_custom_section.json  valid_error_output.json  valid_full.json  valid_minimal.json  valid_tool_calls_only.json
src/glassbox/: __init__.py  assembly.py  cli.py  diff.py  discovery.py  inventory_diff.py  pricing.py  proxy.py  redaction.py
src/glassbox/core/: __init__.py  context.py  emitter.py  file_storage.py  run.py  storage.py
src/glassbox/format/: __init__.py  context_pack.py  context_source.py  diff.py  model_info.py  output.py  run_metadata.py  sections.py  token_budget.py  version.py
src/glassbox/integrations/: langgraph.py
src/glassbox/viewer/: __init__.py  server.py  viewer.html
src/glassbox/wrappers/: __init__.py  anthropic_wrapper.py  openai_wrapper.py  section_extractor.py  stream_buffer.py
tests/: test_assembly.py  test_conformance.py  test_diff.py  test_emitter.py  test_format.py  test_observe.py  test_pricing.py  test_redaction.py  test_section_extractor.py  test_storage.py  test_wrap.py
