[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glassbox"
version = "0.1.0"
description = "AI context observability. See what your LLM saw."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Habib Mehmoodi" }, { name = "ArqAI" }]
keywords = [
    "ai", "llm", "context", "observability", "debugging",
    "anthropic", "openai", "langchain", "langgraph",
    "agent", "context-engineering", "context-pack",
    "glassbox", "replay", "audit", "trust",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.0,<3"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
langgraph = ["langchain-core>=0.3", "langgraph>=0.2"]
server = ["starlette>=0.27", "uvicorn[standard]>=0.20", "sse-starlette>=1.0", "httpx>=0.24"]
cli = ["click>=8.0"]
accurate = ["tiktoken>=0.5"]
all = [
    "glassbox[openai]",
    "glassbox[anthropic]",
    "glassbox[langgraph]",
    "glassbox[server]",
    "glassbox[cli]",
    "glassbox[accurate]",
]
dev = [
    "glassbox[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "tiktoken>=0.5",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
glassbox = "glassbox.cli:cli"

[project.urls]
Homepage = "https://github.com/arq-ai-labs/glassbox"
Documentation = "https://github.com/arq-ai-labs/glassbox"
Repository = "https://github.com/arq-ai-labs/glassbox"

[tool.hatch.build.targets.wheel]
packages = ["src/glassbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true